<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <packaging>pom</packaging>
    <modules>
        <module>sample-service</module>
    </modules>

    <groupId>com.yoursweakfoe</groupId>
    <artifactId>sample-application</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>sample-application</name>
    <description>DDD application skeleton</description>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- ywf-ddd-common 版本（BOM import 统一子模块版本） -->
        <common.version>0.0.1-SNAPSHOT</common.version>

        <!-- Spring Cloud 版本（与 ywf-ddd-common 主 POM 保持一致；BOM 不传递故需自行声明） -->
        <spring-cloud.version>2025.1.2</spring-cloud.version>

        <!-- Spring Cloud Alibaba 版本（与 ywf-ddd-common 主 POM 保持一致；BOM 不传递故需自行声明） -->
        <spring-cloud-alibaba.version>2025.1.0.0</spring-cloud-alibaba.version>

        <!-- 注解处理器版本（maven-compiler-plugin annotationProcessorPaths 不走 dependencyManagement，需显式指定） -->
        <lombok.version>1.18.46</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 引入 ywf-ddd-common BOM：统一子模块版本 -->
            <dependency>
                <groupId>com.yoursweakfoe</groupId>
                <artifactId>ywf-ddd-common</artifactId>
                <version>${common.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud BOM：统一 common-cloud 传递的 SC 组件版本（Feign / LB / CircuitBreaker） -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud Alibaba BOM：统一 common-cloud 传递的 Nacos discovery/config starter 版本；
                 置于 ywf-ddd-common BOM 之后，nacos-client / seata 独立版本由前者覆盖 -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 所有业务子模块共享的依赖 -->
    <dependencies>
        <!-- lombok（provided 不传递，业务代码直接使用） -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <!-- 注解处理器：Lombok -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
